Fixed CSS classes on mobile

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     /* Utilities */
     --big-padding: 2rem;
     --small-padding: 1rem;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 * {
@@ -42,6 +43,49 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+.btn-restart {
+    color: var(--white);
+    font-size: 2rem;
+    padding: 0rem 1.5rem;
+    user-select: none;
+    cursor: pointer;
+    transition: all 0.1s ease-out;
+}
+
+@media (hover: hover) and (pointer: fine) {
+    .btn-restart:hover {
+        transform: scale(1.1);
+    }
+}
+
+.player-names {
+    margin: 1rem 0rem 3rem 0rem;
+    width: 30rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+input {
+    background-color: var(--grey);
+    border: none;
+    color: var(--white);
+    font-family: var(--font-primary);
+    padding: 0.25rem 1rem;
+    width: 45%;
+}
+
+input:focus {
+    outline: none;
+}
+
+#p1-name, #p1-name::placeholder {
+    color: var(--cyan);
+}
+
+#p2-name, #p2-name::placeholder {
+    color: var(--pink);
 }
 
 .game-board {
@@ -76,12 +120,14 @@ body {
     transition: all .2s ease-out;
 }
 
-.row__position:hover {
-    filter: brightness(1.5) blur(0px);
-}
+@media (hover: hover) and (pointer: fine) {
+    .row__position:hover {
+        filter: brightness(1.5) blur(0px);
+    }
 
-.row__position:active {
-    filter: brightness(.85);
+    .row__position:active {
+        filter: brightness(.85);
+    }
 }
 
 .o {
@@ -104,18 +150,24 @@ body {
 .o-winner {
     color: rgb(255, 255, 255);
     background-color: var(--cyan);
-    transform: rotate(90deg);
     font-size: 5rem;
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, .3);
 }
 
 .x-winner {
     color: white;
     background-color: var(--pink);
-    transform: rotate(90deg);
     font-size: 5rem;
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     text-shadow: 0px 0px 10px rgba(255, 255, 255, 1);
+}
+
+@media (hover: hover) and (pointer: fine) {
+    .o-winner {
+        transform: rotate(90deg);
+    }
+
+    .x-winner {
+        transform: rotate(90deg);
+    }
 }
 
 .player1-colors {
@@ -128,43 +180,13 @@ body {
     text-shadow: 0px 5px 2px black;
 }
 
-.btn-restart {
-    color: var(--white);
-    font-size: 2rem;
-    padding: 0rem 1.5rem;
-    user-select: none;
-    cursor: pointer;
-    transition: all 0.1s ease-out;
-}
+@media only screen and (max-width: 550px) {
+    html {
+        font-size: 54%;
+    }
 
-.btn-restart:hover {
-    transform: scale(1.1);
-}
-
-.player-names {
-    margin: 1rem 0rem 3rem 0rem;
-    width: 30rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-input {
-    background-color: var(--grey);
-    border: none;
-    color: var(--white);
-    font-family: var(--font-primary);
-    padding: 0.25rem 1rem;
-    width: 45%;
-}
-
-input:focus {
-    outline: none;
-}
-
-#p1-name, #p1-name::placeholder {
-    color: var(--cyan);
-}
-
-#p2-name, #p2-name::placeholder {
-    color: var(--pink);
+    .winner-text {
+        margin-top: 2rem;
+        font-size: 3rem;
+    }
 }
